# webapi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  macros.rs  main.rs
src/html/: core.rs  mod.rs
src/html/tags/: meta.rs
webapi-bin/: Cargo.toml
webapi-bin/src/: main.rs
webapi-lib/: Cargo.toml
webapi-lib/src/: lib.rs  macros.rs
webapi-lib/src/html/: component.rs  core.rs  events.md  events.rs  mod.rs  prelude.rs  traits.rs
webapi-lib/src/html/tags/: body.rs  doc.rs  head.rs  link.rs  macros.rs  mod.rs  tags.rs
