# [package]
# name = "webapi-rs"
# version = "0.1.0"
# edition = "2021"

[workspace]
members = [
    "webapi-bin",
    "webapi-lib"
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Dawid Janeczko"]
description = "A framework that generates HTML, CSS and JS out of Rust project"
documentation = ""
